--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -218,7 +218,11 @@
 			<artifactId>spring-boot-starter</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
